<resources>
    <string name="app_name">Virus Check</string>
    <string name="todo">TODO</string>
    <string name="virus_check">Virus Check</string>
    <string name="welcomepageicon">welcomePageIcon</string>
    <string name="textview">TextView</string>
    <string name="bio">
Check your files in phone for malware contains.
\n\nYou can easily use this application to upload a file from your phone and compare with database knowable malware signatures.
\n\nOn next page click on Upload button and choose file from your phone which you want to check.
\n\nThen click on Check button to compare your file hash fingerprint with database.\n
    </string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="input">Input</string>
    <string name="new_search">New Search</string>
    <string name="investigate">Investigate</string>
    <string name="hash">Hash:</string>
    <string name="file_path">File path:</string>
    <string name="api_key">API Key:</string>
    <string name="designed_by_prochazka">Designed by Prochazka</string>
    <string name="name">Name:</string>
    <string name="save">SAVE</string>
    <string name="load">Load</string>

</resources>