<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#D5D5D5"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/virus_check"
        android:textAlignment="center"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:contentDescription="@string/welcomepageicon"
        app:srcCompat="@drawable/viruscheckicon" />

    <ScrollView
        android:id="@+id/welcome_scroll"
        android:layout_width="match_parent"
        android:layout_height="417dp">

        <TextView
            android:id="@+id/welcome_text"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textColor="#000000" />
    </ScrollView>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="launchSecondActivity"/>

</LinearLayout>