<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="69dp"
        android:backgroundTint="@color/grey_200"
        android:contentDescription="@string/todo"
        android:onClick="launchSearchActivity"
        android:scaleType="fitEnd"
        android:src="@android:drawable/stat_notify_more"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="444dp"
        android:backgroundTint="@color/grey_200"
        android:contentDescription="@string/todo"
        android:onClick="launchInvestigateActivity"
        android:scaleType="fitEnd"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionModePasteDrawable" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="91dp"
        android:text="@string/new_search"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="456dp"
        android:text="@string/investigate"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>